syntax = "proto3";

option csharp_namespace = "DNZ.Calculator.GrpcServer.Protos";

message SumRequest {
	int64 first_number = 1;
	int64 second_number = 2;
}

message SumResponse {
	int64 result = 1;
}


service CalculatorService {

	rpc Sum(SumRequest) returns (SumResponse);
}